fix(footer): invisible width
- also changed commit message

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -70,14 +70,9 @@ flex: 3;
 background-color: $grey-color-dark;
 padding: .5rem;
 color: #aaa;
-width:100%;
-max-height: 1.5rem;
+text-decoration: none;
 }
 
-.footer a{
-    color: #aaa;
-    text-decoration: none;
-}
 /**
  * Pagination   **********************************************************
  */
